Fixed fluid layout issues on index page. Fixes #37.

--- a/app/assets/stylesheets/requests.css.sass
+++ b/app/assets/stylesheets/requests.css.sass
@@ -23,22 +23,33 @@ textarea#comment_content
 
   // Small (list-style) requests
   li
-    box-shadow: inset 0 0 0 1px #fff, inset 0 0 90px 0 #e3e3e3
-    &:hover
-      box-shadow: inset 0 0 0 1px #fff, inset 0 0 90px 0 #efefef
     padding: 5px
     list-style: none
     border: none
     border-bottom: 1px solid #ccc
     a
       color: inherit
-    h5
-      margin-top: 0
-      margin-bottom: 2px
-    .request_id
-      text-align: right
-      padding-right: 4px
-      color: #777
+      &:hover
+        text-decoration: none
+
+    &.request
+      box-shadow: inset 0 0 0 1px #fff, inset 0 0 90px 0 #e3e3e3
+      &:hover
+        box-shadow: inset 0 0 0 1px #fff, inset 0 0 90px 0 #efefef
+      .avatar
+        width: 32px
+        float: left
+        margin-right: 6px
+        padding-right: 15px
+        border-right: 1px solid #DDD
+      h5
+        margin-top: 0
+        margin-bottom: 2px
+      .request_id
+        float: right
+        text-align: right
+        padding-right: 4px
+        color: #777
 
     // Footer/info bar
     &:last-child
@@ -48,10 +59,9 @@ textarea#comment_content
       color: #888
       padding: 2px
       padding-left: 12px
-      box-shadow: none
       background-color: #eee
 
-.request
+div.request
   @include box
   margin-top: 20px
   margin-bottom: 60px
